--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "adelgu-react-scroller",
   "version": "1.0.0",
   "description": "Easy to use react scroller component",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "license": "MIT",
   "peerDependencies": {
     "react": "^19.0.0",
