--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-webpack5": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@types/jest": "^29.5.14",
     "esbuild": "^0.24.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "storybook": "^8.4.7",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   },
   "scripts": {
     "build": "node esbuild && yarn tsc",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest"
   }
 }
