--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.14.0",
+    "husky": ">=6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": ">=10",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -41,6 +43,10 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
-    "lint": "eslint \"src/*\""
+    "lint": "eslint \"src/*\"",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
   }
 }
