Configure jest lint-staged

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --fix"
+    "*.ts": [
+      "eslint --cache --fix",
+      "jest --passWithNoTests"
+    ]
   }
 }
